--- a/demo.yaml
+++ b/demo.yaml
@@ -10,9 +10,9 @@ otel_agent:
       endpoint: http://vectormpp-vectorh-leader-0:43036/v1
     attribute_map:
       node_name:
-          "vectorh-leader-0.vectorh-leader.helm-testing.svc.cluster.local": "Leader"
-          "vectorh-worker-0.vectorh-worker.helm-testing.svc.cluster.local": "Worker-0"
-          "vectorh-worker-1.vectorh-worker.helm-testing.svc.cluster.local": "Worker-1"
+          "vectormpp-vectorh-leader-0.vectorh-leader.helm-testing.svc.cluster.local": "Leader"
+          "vectormpp-vectorh-worker-0.vectorh-worker.helm-testing.svc.cluster.local": "Worker-0"
+          "vectormpp-vectorh-worker-1.vectorh-worker.helm-testing.svc.cluster.local": "Worker-1"
 
 otel_collector:
   image:
